--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "activationCommands": {
     "atom-text-editor": ["tfs:checkout","tfs:undo"]
   },
-  "repository": "https://github.com/zamboney/tfs",
+  "repository": "https://github.com/zamboney/atom-tfs",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
