--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "tfs",
   "main": "./lib/tfs",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "atom plugin to undo and checkout tfs in the local file system",
   "keywords": [],
   "activationCommands": {
-    "atom-text-editor": ["tfs:checkout","tfs:undo"]
+    "atom-text-editor": [
+      "tfs:checkout",
+      "tfs:undo"
+    ]
   },
   "repository": "https://github.com/zamboney/atom-tfs.git",
   "license": "MIT",
